# WorldProject

./: .cproject  .gitignore  .project  CMakeLists.txt  CommonGeometry.cpp  CommonGeometry.h  CoordinatePoint.h  CoordinateSystem.cpp  CoordinateSystem.h  Graph.cpp  Graph.h  IcosahedronDrawer.cpp  IcosahedronDrawer.h  IcosahedronGraph.cpp  IcosahedronGraph.h  IcosahedronWorld.h  MessageLogger.cpp  MessageLogger.h  Plane.cpp  Plane.h  README  TextBox.cpp  TextBox.h  TrianglePartition.h  TriangleTerrainSkin.cpp  TriangleTerrainSkin.h  main.cpp
Debug/: CommonGeometry.d  CoordinatePoint.d  CoordinateSystem.d  Graph.d  IcosahedronDrawer.d  IcosahedronGraph.d  IcosahedronWorld.d  MessageLogger.d  Plane.d  PyramidCoordinateSpace.d  TextBox.d  TriangleTerrainSkin.d  WorldProject  main.d  makefile  objects.mk  subdir.mk
src/main/cpp/: BlockArray.h  Graph.h  PointIndex.h  PyramidCoordinateSpace.cpp  PyramidCoordinateSpace.h  SimpleDynamicArray.h  main.cpp
src/main/cpp/core/: CoordinatePoint.cpp  IcosahedronGraph.h  IcosahedronWorld.cpp  TerrainChangeCallback.h  TriangleTerrainSkin.cpp
src/main/cpp/core/v2/: AbstractNodeVisitor.h  AbstractNodeVisitorController.h  BreadthFirstNodeVisitorController.cpp  BreadthFirstNodeVisitorController.h  GraphManager.cpp  GraphManager.h  ImmutableChildNode.h  ImmutableNode.cpp  ImmutableNode.h  ImmutableRootNode.h  ModificationVisitorAction.h  Node.cpp  Node.h  NodeAccessor.cpp  NodeAccessor.h  NodeConnectivityChildData.h  NodeConnectivityData.cpp  NodeConnectivityData.h  NodeConnectivityRootData.h  NodeData.h  NodeModificationSession.h  NodeModificationVisitor.cpp  NodeModificationVisitor.h  NodeVisitor.h  NodeVisitorSession.cpp  NodeVisitorSession.h  SimpleNodeVisitor.cpp  SimpleNodeVisitor.h
src/main/cpp/osg/: IcosahedronDrawer.h  MessageLogger.cpp  SDLTest.cpp
src/test/cpp/core/v2/: TestBreadthFirstNodeVisitorController.cpp  TestGraphManager.cpp  TestImmutableNodeFactory.cpp  TestNode.cpp  TestNodeConnectivityData.cpp  TestNodeModificationVisitor.cpp  TestNodeVisitorSession.cpp  TestSimpleNodeVisitorSession.cpp
